--- a/app/views/demo/index.html.erb
+++ b/app/views/demo/index.html.erb
@@ -5,13 +5,13 @@
   </div>
 
   <div class="flex flex-col gap-4">
-    <h2 class="text-xl font-semibold">Enabled Button</h2>
-    <%= render ButtonComponent.new(size: :md) %>
+    <h2 class="text-xl font-semibold">Medium Button</h2>
+    <%= render ButtonComponent.new(size: :md, theme: :secondary) %>
   </div>
 
   <div class="flex flex-col gap-4">
-    <h2 class="text-xl font-semibold">Disabled Button</h2>
-    <%= render ButtonComponent.new(size: :lg) %>
+    <h2 class="text-xl font-semibold">Large Button</h2>
+    <%= render ButtonComponent.new(size: :lg, theme: :primary) %>
   </div>
 
   <div class="flex flex-col gap-4">
