--- a/app/views/demo/index.html.erb
+++ b/app/views/demo/index.html.erb
@@ -11,7 +11,7 @@
 
   <div class="flex flex-col gap-4">
     <h2 class="text-xl font-semibold">Large Button</h2>
-    <%= render ButtonComponent.new(size: :lg, theme: :primary) %>
+    <%= render ButtonComponent.new(size: :lg, theme: :primary, icon: :plus) %>
   </div>
 
   <div class="flex flex-col gap-4">
