--- a/app/components/button_component.html.erb
+++ b/app/components/button_component.html.erb
@@ -20,10 +20,11 @@
       <%= overlay_top %>">
     </div>
 
-    <div class="<%= size_inners %> flex items-center justify-center bg-gradient-to-t absolute z-10 from-white/30 to-[oklch(0.31 0 0)] p-1 flex-1 transition-all duration-200
+    <div class="<%= size_inners %> flex items-center gap-x-3 justify-center bg-gradient-to-t absolute z-10 from-white/30 to-[oklch(0.31 0 0)] p-1 flex-1 transition-all duration-200
       <%= gradient_background_classes %>
       <%= gradient_radius %>
       <%= gradient_top %>">
+      <%= heroicon_tag @icon, class: icon_classes if @icon %>
       <span><%= @label %></span>
     </div>
   </button>
